# brumski_cpp

./: .gitignore  CMakeLists.txt  README.md  brumski_cpp.h.in
BRUMSKI/Documentation Folder/: BRUMSKI_GRADE_CALCULATOR.md
BRUMSKI/include/BRUMSKI/BRUMSKI_MATH/: BRUMSKI_AREA_2D_SHAPES.hpp  BRUMSKI_GRADE_CALCULATOR.hpp
BRUMSKI_MATH/: BRUMSKI_AREA_2D_SHAPES.hpp  BRUMSKI_GRADE_CALCULATOR.hpp
BRUMSKI_MATH/Documentation Folder/: BRUMSKI_AREA_2D_SHAPES.md  BRUMSKI_GRADE_CALCULATOR.md  BRUMSKI_GRADE_CALCULATOR.txt
Documentation/: add_sub_etc.md  area2dshapes.md  name.md
Documentation Folder/: BRUMSKI_AREA_2D_SHAPES.md
ascii/: name.hpp
ascii/work_header_files/: A.hpp  B.hpp  C.hpp  D.hpp  E.hpp  F.hpp  G.hpp  H.hpp  I.hpp  J.hpp  K.hpp  L.hpp  M.hpp  N.hpp  O.hpp  P.hpp  Q.hpp  R.hpp  S.hpp  SPACE.hpp  T.hpp  U.hpp  V.hpp  W.hpp  X.hpp  Y.hpp  Z.hpp  boolean_functions.hpp
brumski/Documentation Folder/: add_sub_etc.md  area2dshapes.md  grade_calculator.md  grade_point.md
brumski/math/: add_sub_etc.hpp  area2Dshapes.hpp  area2dshapes.hpp  grade_calculator.hpp
docs/: area2dshapes.md  cgpa.md  derivatives.md  grade_calculator.md  grade_point.md  name.md
example/: CMakeLists.txt  README.md
example/src/: main.cpp
example/test1/: CMakeLists.txt
example/test1/src/: main.cpp
include/BRUMSKI_MATH/: BRUMSKI_GRADE_CALCULATOR.hpp
include/brumski_cpp/ascii/: A.hpp  C.hpp  I.hpp  K.hpp  M.hpp  Q.hpp  SPACE.hpp  T.hpp  U.hpp  Y.hpp  Z.hpp  __B.hpp  __D.hpp  __E.hpp  __F.hpp  __G.hpp  __H.hpp  __J.hpp  __L.hpp  __N.hpp  __O.hpp  __P.hpp  __R.hpp  __S.hpp  __V.hpp  __W.hpp  __X.hpp  __boolean_functions.hpp  name.hpp
include/brumski_cpp/math/: area2dshapes.hpp  derivatives.hpp  grade_calculator.hpp  integration.hpp
include/brumski_cpp/school/: cgpa.hpp
math/: add_sub_etc.hpp  area2dshapes.hpp  derivatives.hpp  grade_calculator.hpp  grade_point.hpp  integration.hpp  test.cpp
school/: cgpa.hpp
src/: brumski_cpp_VERSION.cpp
src/ascii/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  R.cpp  S.cpp  SPACE.cpp  T.cpp  U.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  Z.cpp  boolean_functions.cpp  name.cpp
src/math/: area2dshapes.cpp  derivatives.cpp  grade_calculator.cpp  integration.cpp
src/school/: cgpa.cpp
tests/: area2dshapes.cpp  cgpa.cpp  derivatives.cpp  grade_calculator.cpp  name.cpp
